--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.1"
+    "@astrojs/svelte": "^7.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/uuid": "^10.0.0",
+    "astro": "^5.11.1",
+    "svelte": "^5.36.1",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0"
   }
 }
